# go2go

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  build.rs  build.sh
client/src/: components.rs  game_state.rs  lib.rs  main.rs
client/static/: index.html
server/: Cargo.toml
server/src/: game_logic.rs  main.rs
