# client/Cargo.toml
[package]
name = "client"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # Add this line to specify the build script

[dependencies]
yew = "0.19.3"
yewtil = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
